--- a/README
+++ b/README
@@ -6,12 +6,15 @@ pysqlite - http://pypi.python.org/pypi/pysqlite/
 
 database: kiwitobes.com/db/searchindex.db
 
+-- Seeding database
 import searchengine
 reload(searchengine)
 crawler = searchengine.crawler('searchindex.db')
 pages = ['http://kiwitobes.com/wiki/Categorical_list_of_programming_languages.html']
 crawler.crawl(pages)
 
+-- Searching
+import searchengine
 reload(searchengine)
 e = searchengine.searcher('searchindex.db')
 e.query('functional programming')
