--- a/README
+++ b/README
@@ -25,3 +25,24 @@ import searchengine
 reload(searchengine)
 e = searchengine.searcher('searchindex.db')
 e.query('functional programming')
+
+
+-- Testing NN
+import nn
+reload(nn)
+mynet = nn.searchnet('nn.db')
+mynet.maketables()
+
+wWorld,wRiver,wBank =101,102,103
+uWorldBank,uRiver,uEarth =201,202,203
+mynet.trainquery([wWorld,wBank],[uWorldBank,uRiver,uEarth],uWorldBank)
+
+mynet.getresult([wWorld,wBank],[uWorldBank,uRiver,uEarth])
+
+allurls = [uWorldBank,uRiver,uEarth]
+
+for i in range(30): mynet.trainquery([wWorld,wBank],allurls,uWorldBank); mynet.trainquery([wRiver,wBank],allurls,uRiver); mynet.trainquery([wWorld],allurls,uEarth);
+
+mynet.getresult([wWorld,wBank],allurls)
+mynet.getresult([wRiver,wBank],allurls)
+mynet.getresult([wBank],allurls)
