--- a/README
+++ b/README
@@ -4,7 +4,7 @@ BeautifulSoup - http://www.crummy.com/software/BeautifulSoup/#Download
 
 pysqlite - http://pypi.python.org/pypi/pysqlite/
 
-database: kiwitobes.com/db/searchindex.db
+if you want a full database to download: kiwitobes.com/db/searchindex.db
 
 -- Seeding database
 import nn
@@ -33,8 +33,8 @@ reload(nn)
 mynet = nn.searchnet('nn.db')
 mynet.maketables()
 
-wWorld,wRiver,wBank =101,102,103
-uWorldBank,uRiver,uEarth =201,202,203
+wWorld,wRiver,wBank = 101,102,103
+uWorldBank,uRiver,uEarth = 201,202,203
 mynet.trainquery([wWorld,wBank],[uWorldBank,uRiver,uEarth],uWorldBank)
 
 mynet.getresult([wWorld,wBank],[uWorldBank,uRiver,uEarth])
